Fix some data is not showing issue

--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@
   }
 
   .button {
-    @apply px-4 py-2 text-sm sm:px-5 sm:py-3 sm:text-base font-semibold whitespace-nowrap rounded shadow-sm transition ease-in-out duration-300;
+    @apply px-4 py-2 text-sm text-center sm:px-5 sm:py-3 sm:text-base font-semibold whitespace-nowrap rounded shadow-sm transition ease-in-out duration-300;
   }
 
   .button-black-solid {
